--- a/revisaoGIT.html
+++ b/revisaoGIT.html
@@ -4,17 +4,19 @@
 
 <head>
 
-<title>Hello World!</title>
+    <title>Hello World!</title>
 
-<link rel="stylesheet" href="bluestyle.css">
+    <link rel="stylesheet" href="bluestyle.css">
 
 </head>
 
 <body>
 
-<h1>Hello world!</h1>
+    <h1>Hello world!</h1>
 
-<p>Esse é o primeiro arquivo no meu repositório Git.</p>
+    <p>Este é o primeiro arquivo no meu Git Repositório</p>
+
+    <p>Uma nova vertente em nossas vidas de DEV’s</p>
 
 </body>
 
