Dando continuidade a revisão, roteiro do curso Git e GitHub

--- a/revisaoGIT.html
+++ b/revisaoGIT.html
@@ -4,19 +4,23 @@
 
 <head>
 
-    <title>Hello World!</title>
+<title>Hello World!</title>
 
-    <link rel="stylesheet" href="bluestyle.css">
+<link rel="stylesheet" href="bluestyle.css">
 
 </head>
 
 <body>
 
-    <h1>Hello world!</h1>
+<h1>Hello world!</h1>
 
-    <p>Este é o primeiro arquivo no meu Git Repositório</p>
+<div><img src="icons8-github-50.png" alt="Hello World from Space"
 
-    <p>Uma nova vertente em nossas vidas de DEV’s</p>
+style="width:100%;max-width:960px"></div>
+
+<p>Este é meu primeiro arquivo no meu Git Repositório</p>
+
+<p>Uma nova vertente em nossas vidas de DEV’s</p>
 
 </body>
 
