--- a/revisaoGIT.html
+++ b/revisaoGIT.html
@@ -4,19 +4,29 @@
 
 <head>
 
-    <title>Hello World!</title>
+<title>Hello World!</title>
 
-    <link rel="stylesheet" href="bluestyle.css">
+<link rel="stylesheet" href="bluestyle.css">
 
 </head>
 
 <body>
 
-    <h1>Hello world!</h1>
 
-    <p>Este é o primeiro arquivo no meu Git Repositório</p>
 
-    <p>Uma nova vertente em nossas vidas de DEV’s</p>
+
+<h1>Hello world!</h1>
+
+<div><img src="img_hello_world.jpg" alt="Hello World from Space" style="width:100%;max-width:960px"></div>
+
+<p>Este é meu primeiro arquivo no meu Git Repositório</p>
+
+<p>Uma nova vertente em nossas vidas de DEV’s</p>
+
+<div><img src="img_hello_git.jpg" alt="Hello Git" style="width:100%;max-width:640px"></div>
+
+
+
 
 </body>
 
