--- a/revisaoGIT.html
+++ b/revisaoGIT.html
@@ -20,6 +20,8 @@
 
     <p>Essa página explica como merge funciona</p>
 
+    <p>Explicando Branches através di GitHub</p>
+
     <div><img src="img_hello_git.jpg" alt="Hello Git" style="width:100%;max-width:640px"></div>
 
 </body>
